--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-gameview></app-gameview>
-<router-outlet />
+<nav>
+  <a [routerLink]="['/home']">Home</a><br>
+  <a [routerLink]="['/login']">Login</a>
+</nav>
+<router-outlet></router-outlet>
