created form for LoginComponent template

--- a/frontend/src/components/login/login.component.html
+++ b/frontend/src/components/login/login.component.html
@@ -1,2 +1,9 @@
 <p>login works</p>
+<div class="login-form">
+  <label for="uname">Username</label>
+  <input type="text" placeholder="Enter Username" name="uname" required>
+  <br>
+  <label for="pass">Password</label>
+  <input type="text" placeholder="Enter Password" name="pass" required>
+</div>
 <router-outlet></router-outlet>
