routerLink for createUser route

--- a/frontend/src/components/login/login.component.html
+++ b/frontend/src/components/login/login.component.html
@@ -24,7 +24,7 @@
       <button form="login-form" type="submit" (click)="submitUserInfo()">Submit</button>
     </div>
     <div class="create-account">
-      <a href="https://google.com">Don't have an account?</a>
+      <a [routerLink]="['/createUser']">Don't have an account?</a>
     </div>
   </form>
 </div>
