remove createUser from login component button

--- a/frontend/src/components/login/login.component.html
+++ b/frontend/src/components/login/login.component.html
@@ -21,7 +21,7 @@
       </button>
     </div>
     <div class="submit">
-      <button form="login-form" type="submit" (click)="submitUserInfo()">Submit</button>
+      <button form="login-form" type="submit">Submit</button> <!-- submit function add :D -->
     </div>
     <div class="create-account">
       <a [routerLink]="['/createUser']">Don't have an account?</a>
