--- a/frontend/src/components/createuser/createuser.component.html
+++ b/frontend/src/components/createuser/createuser.component.html
@@ -1,16 +1,5 @@
-<head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap"
-    rel="stylesheet">
-</head>
 <div class="create-user-page">
-  <form class="crud-form" (ngSubmit)="submitUserInfo()" #loginForm="ngForm">
+  <form class="crud-form" id="ngForm" (ngSubmit)="submitUserInfo()">
     <h2>Create User</h2>
     <div class="input-user">
       <input #uname type="text" placeholder="Username" name="uname" required>
@@ -25,7 +14,7 @@
     </div>
 
     <div class="submit">
-      <button type="submit">Submit</button>
+      <button form="ngForm">Submit</button>
     </div>
   </form>
 </div>
