username in welcome message added

--- a/frontend/src/components/gameview/gameview.component.html
+++ b/frontend/src/components/gameview/gameview.component.html
@@ -1,4 +1,5 @@
 <div id="gallery">
+  <h1>Welcome {{ uname }}!</h1> <!--username from GameComponent-->
   <h3>Game Covers:</h3>
   <ul>
     <li style="list-style: none" *ngFor="let cover of covers">
