--- a/frontend/src/components/gameview/gameview.component.css
+++ b/frontend/src/components/gameview/gameview.component.css
@@ -1,14 +1,15 @@
-#gamecovers {
+.wrapper {
+  display: grid;
+  grid-template-columns: .5fr .5fr .5fr .5fr .5fr;
+  gap: 10px;
   width: 100%;
-  height: auto;
-  border-radius: 8px;
-  object-fit: cover;
 }
 
-#gallery {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-  gap: 10px;
-  padding: 30px;
-  justify-content: center;
+.gamediv img {
+  width: 100%;
+  height: 200px;
+}
+
+.gamediv p {
+  font-family: Ubuntu;
 }
