--- a/frontend/src/components/gameview/gameview.component.html
+++ b/frontend/src/components/gameview/gameview.component.html
@@ -9,7 +9,7 @@
   </div>
 </div>
 <div class="container">
-  <div class="has-text-centered">
+  <div class="pagination">
     <pagination-controls (pageChange)="page = $event"></pagination-controls>
   </div>
 </div>
